syntax = "proto3";

option go_package = "/";

package capitalize;

message TextRequest {
    string text = 1;
}

message TextResponse {
    string capitalized_text = 1;
}

message UploadRequest {
    string title = 1;
}

message UploadResponse {
    int32 number = 1;
}

service TextService {
    rpc Capitalize(TextRequest) returns (TextResponse);
    rpc Request(UploadRequest) returns (UploadResponse);
}
